kubernetes/apps/storage/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Management
    gethomepage.dev/name: Rook Dashboard
    gethomepage.dev/icon: rook
    gethomepage.dev/pod-selector: app.kubernetes.io/name=ceph-mgr
spec:
  hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
